--- a/Models/SpeechLM/2024.10.29_VAT.md
+++ b/Models/SpeechLM/2024.10.29_VAT.md
@@ -1,4 +1,4 @@
-# VAT (Very Attentive Tacotron)
+# ***VAT*** (Very Attentive Tacotron)
 
 <details>
 <summary>基本信息</summary>
@@ -18,7 +18,7 @@
   - [Github](https://github.com/google/sequence-layers/blob/main/examples/very_attentive_tacotron.py)
   - [Demo](https://google.github.io/tacotron/publications/very_attentive_tacotron/index.html)
 - 文件:
-  - [ArXiv](_PDF/2410.22179v1__VAT__Very_Attentive_Tacotron_Robust_and_Unbounded_Length_Generalization_in_Autoregressive_Transformer-Based_Text-to-Speech.pdf)
+  - [ArXiv](_PDF/2410.22179v1__***VAT***__Very_Attentive_Tacotron_Robust_and_Unbounded_Length_Generalization_in_Autoregressive_Transformer-Based_Text-to-Speech.pdf)
   - [Publication] #TODO
 
 </details>
@@ -50,34 +50,34 @@ A system incorporating these improvements, which we call ***Very Attentive Tacot
 
 ## 1.Introduction: 引言
 
-Autoregressive (AR) Transformer-based sequence models \cite{NIPS2017:transformers} are used today in a majority of state-of-the-art systems across text, vision, and audio domains.
-Though swiftly adopted for sequence-to-sequence text-output tasks like machine translation, video captioning \cite{video-captioning-transformer}, and speech recognition \cite{speech-transformer}, adoption for audio-output tasks like text-to-speech (TTS) is notably more recent.
+Autoregressive (AR) Transformer-based sequence models ([Transformer (2017)](../_Transformer/2017.06.12_Transformer.md)) are used today in a majority of state-of-the-art systems across text, vision, and audio domains.
+Though swiftly adopted for sequence-to-sequence text-output tasks like machine translation, video captioning ([Zhou et al. (2018)](../CV/2018.04.03_End-to-End_Dense_Video_Captioning_with_Masked_Transformer.md)), and speech recognition ([Speech-Transformer (2018)](../ASR/2018.04.15_Speech_Transformer.md)), adoption for audio-output tasks like text-to-speech (TTS) is notably more recent.
 Inherent difficulties in reliably evaluating TTS systems coupled with the low quality of public TTS datasets likely played a role in the delayed adoption.
 This was exacerbated by the failure of AR models of continuous sequences (e.g., spectrograms) to match the performance of their discrete counterparts in the text domain.
-It was only after the arrival of audio discretization techniques suitable for speech generation tasks \cite{audiolm} that the TTS community began to direct more effort toward AR Transformer-based models.
+It was only after the arrival of audio discretization techniques suitable for speech generation tasks ([AudioLM (2022)](2022.09.07_AudioLM.md)) that the TTS community began to direct more effort toward AR Transformer-based models.
 
 A key challenge faced by such models, however, stems from their extensive reliance on attention operations, which tend to cause robustness issues that make them unfit for use in a production TTS environment.
-Early attention-based TTS models, such as Tacotron \cite{Wang:2017uz:tacotron,Shen:2017:tacotron2}, often exhibited problems like word omission or repetition, and struggled to generalize
+Early attention-based TTS models, such as [Tacotron (2017)](../TTS2_Acoustic/2017.03.29_Tacotron.md), [Tacotron2 (2017)](../TTS2_Acoustic/2017.12.16_Tacotron2.md), often exhibited problems like word omission or repetition, and struggled to generalize
 beyond the training lengths.
 Attempts to mitigate these issues using monotonic alignment mechanisms yielded some success
-\cite{Raffel:2017vl:monotonic,Zhang:2018is:forward-attention,battenberg2020:location-relative},
+([Raffel et al. (2017)](../_Full/2017.04.03_Online_and_Linear-Time_Attention_by_Enforcing_Monotonic_Alignments.md); [Zhang et al. (2018)](../_Full/2018.07.18_Forward_Attention_in_Sequence-To-Sequence_Acoustic_Modeling_for_Speech_Synthesis.md); [Tacotron-GMMA (2019)](../TTS2_Acoustic/2019.10.23_DCA.md)),
 but many ultimately turned to non-autoregressive, duration-based models, which were more robust and efficient during
-synthesis \cite{NEURIPS2020_5c3b99e8:glow-tts,shen2020:non-attentive-tacotron,ren2021fastspeech2}.
-While significant research has focused on improving robustness and length generalization for Transformers in general, these issues still persist in the latest AR TTS systems \citep{song2024ellavstableneuralcodec:ella-v, du2024valltdecoderonlygenerativetransducer:vall-t}.
+synthesis ([Glow-TTS (2020)](../TTS2_Acoustic/2020.05.22_Glow-TTS.md); [NAT (2020)](../TTS2_Acoustic/2020.10.08_NAT.md); [FastSpeech2 (2020)](../TTS2_Acoustic/2020.06.08_FastSpeech2.md)).
+While significant research has focused on improving robustness and length generalization for Transformers in general, these issues still persist in the latest AR TTS systems ([ELLA-V (2024)](2024.01.14_ELLA-V.md); [VALL-T (2024)](2024.01.25_VALL-T.md)).
 
-In this paper we introduce a system called \textit{Very Attentive Tacotron} (VAT), a discrete AR Transformer-based encoder-decoder model designed for robust speech synthesis.
-VAT augments a baseline T5-based \cite{raffel2020exploring:t5} TTS architecture with an alignment mechanism that exploits the monotonic nature of the text-to-speech task, while preserving the powerful modeling capabilities of stacked self- and cross-attention layers.
+In this paper we introduce a system called ***Very Attentive Tacotron (VAT)***, a discrete AR Transformer-based encoder-decoder model designed for robust speech synthesis.
+***VAT*** augments a baseline [T5-based (2019)](../TextLM/2019.10.23_T5.md) TTS architecture with an alignment mechanism that exploits the monotonic nature of the text-to-speech task, while preserving the powerful modeling capabilities of stacked self- and cross-attention layers.
 This leads to virtually limitless length generalization, while matching the naturalness and expressiveness of the T5-TTS baseline system and eliminating issues with repeated or dropped words.
 
 ## 2.Related Works: 相关工作
 
-Our work was inspired by AudioLM \cite{audiolm}, which showed impressive speech generation results using a decoder-only AR Transformer trained to model discrete targets produced by a self-supervised speech representation and a neural audio codec.
-This was extended with text inputs for TTS in the decoder-only case by VALL-E \cite{wang2023neural:arxiv:vall-e}, and in the encoder-decoder case by SPEAR-TTS \cite{kharitonov2023speak:spear-tts} and MQ-TTS \cite{chen2023vector:mq-tts}.
+Our work was inspired by [AudioLM (2022)](2022.09.07_AudioLM.md), which showed impressive speech generation results using a decoder-only AR Transformer trained to model discrete targets produced by a self-supervised speech representation and a neural audio codec.
+This was extended with text inputs for TTS in the decoder-only case by [VALL-E (2023)](2023.01.05_VALL-E.md), and in the encoder-decoder case by [SPEAR-TTS (2023)](2023.02.07_SPEAR-TTS.md) and [MQ-TTS](2023.02.08_MQTTS.md).
 
-However, \citet{song2024ellavstableneuralcodec:ella-v} found that VALL-E was highly non-robust (in ways we note are reminiscent of early attention-based TTS)
-and proposed ELLA-V, which essentially performs duration modeling by learning to predict ``end-of-phoneme'' markers via forced alignments of training data.
-With similar motivations, VALL-T \cite{du2024valltdecoderonlygenerativetransducer:vall-t}
-extends VALL-E by replacing the objective with a Transducer mechanism \cite{rnn-t} that marginalizes over hard alignments during training and interacts with alignment-shifted text-side relative position embeddings.
+However, [ELLA-V (2024)](2024.01.14_ELLA-V.md) found that VALL-E was highly non-robust (in ways we note are reminiscent of early attention-based TTS)
+and proposed ELLA-V, which essentially performs duration modeling by learning to predict "end-of-phoneme" markers via forced alignments of training data.
+With similar motivations, [VALL-T (2024)](2024.01.25_VALL-T.md)
+extends VALL-E by replacing the objective with a Transducer mechanism ([RNN-T (2012)](../ASR/2012.11.14_RNN-T.md)) that marginalizes over hard alignments during training and interacts with alignment-shifted text-side relative position embeddings.
 Unlike standard AR decoding, this scheme requires a costly sequence-wide inference pass each time the alignment shifts,
 and it is unclear whether it can generalize significantly beyond the training lengths.
 Finally, to prevent major transcript deviations, MQ-TTS had to limit cross-attention to a single layer and head which is applied over a very narrow (3-6 input tokens) monotonically advancing window.
@@ -91,17 +91,17 @@ The scalar alignment position is learned directly and doesn't rely on dynamic pr
 
 ### 3.1.System Overview
 
-Our VAT model and the baseline T5-TTS model are based on the architecture of the T5 encoder-decoder Transformer originally used for a wide variety of NLP tasks \cite{raffel2020exploring:t5} and later used in SPEAR-TTS \cite{kharitonov2023speak:spear-tts}.
+Our ***VAT*** model and the baseline T5-TTS model are based on the architecture of the T5 encoder-decoder Transformer originally used for a wide variety of NLP tasks ([T5 (2019)](../TextLM/2019.10.23_T5.md)) and later used in [SPEAR-TTS (2023)](2023.02.07_SPEAR-TTS.md).
 The diagrams in Figure~\ref{fig:vat-tts-overview} give an overview of our discrete TTS setup and then breakdown the differences
 between the decoders used in the two models.
 
-For audio discretization, we use a neural vocoder paired with a VQ-VAE \cite{van2017neural:vqvae} trained to autoencode the vocoder's input spectrograms.
+For audio discretization, we use a neural vocoder paired with a [VQ-VAE (2017)](../../Modules/VQ/2017.11.02_VQ-VAE.md) trained to autoencode the vocoder's input spectrograms.
 This allows us to quickly retrain the spectrogram discretization for different bitrates or frame rates without having to retrain an entire neural audio codec model, which can be a time consuming and finicky process.
 The VQ-VAE is trained using a simple L1 reconstruction loss,
-and to improve reconstruction quality, its encoder yields multiple categorical codes per frame using product quantization (PQ) \cite{el-nouby2023image:product-quantization} over multiple codebooks.
-The neural vocoder we use is GAN-based and combines features from Parallel WaveGAN \cite{parallel-wavegan} and Hifi-GAN \cite{NEURIPS2020_c5d73680:hifi-gan}.
+and to improve reconstruction quality, its encoder yields multiple categorical codes per frame using [product quantization (PQ)](../../Modules/VQ/PQ.md) over multiple codebooks.
+The neural vocoder we use is GAN-based and combines features from [Parallel WaveGAN (2019)](../TTS3_Vocoder/2019.10.25_Parallel_WaveGAN.md) and [HiFi-GAN (2020)](../TTS3_Vocoder/2020.10.12_HiFi-GAN.md).
 
-Unlike the systems covered in Section~\ref{sec:related-work} that do ``zero-shot'' speaker cloning via audio prompting, we learn separate speaker embeddings for each speaker in the training set.
+Unlike the systems covered in Section~\ref{sec:related-work} that do "zero-shot" speaker cloning via audio prompting, we learn separate speaker embeddings for each speaker in the training set.
 We find this better suited for medium-sized datasets and industry use cases, where we care about creating high quality voices for specific target speakers.
 
 At the input side, we use a self-attention-based encoder to process the text followed by an autoregressive decoder that interacts with the encoded text via multiple cross-attention layers.
@@ -112,8 +112,7 @@ Full system details can be found in Appendix~\ref{app:model-details}.
 
 ### 3.2.T5 Relative Position Biases
 
-T5 introduced an efficient parameterization of relative position biases (RPBs) used to encode locality information in self-attention operations,
-which was subsequently shown to outperform other position encoding schemes with respect to length generalization on certain sequence tasks \cite{kazemnejad2023impactpositionalencodinglength:nope}.
+T5 introduced an efficient parameterization of relative position biases (RPBs) used to encode locality information in self-attention operations, which was subsequently shown to outperform other position encoding schemes with respect to length generalization on certain sequence tasks ([Kazemnejad et al. (2023)](../../Modules/PositionEmb/2023.05.31_NoPE.md)).
 RPBs are used in dot product self-attention when computing attention scores, $s_{i,j}^{(k)}$, and attention weights, $\alpha_{i,j}^{(k)}$, for attention head $k$:
 
 $$
@@ -148,7 +147,7 @@ The top of Figure~\ref{fig:irpb-mapping} shows an example of how distances are m
 
 While RPBs provide locality information for self-attention, they can't be used in cross-attention because there is no sense of relative distance between encoder and decoder time steps.
 This lack of location information in cross-attention is a big reason why attention-based TTS systems tend to have issues with reliability and length generalization.
-One way to introduce a sense of relative distance for use with cross-attention RPBs is to compute an alignment position for each decoder time step that serves as the ``zero'' relative position along the time dimension of the encoder outputs.
+One way to introduce a sense of relative distance for use with cross-attention RPBs is to compute an alignment position for each decoder time step that serves as the "zero" relative position along the time dimension of the encoder outputs.
 
 ### 3.3.Interpolated Relative Position Biases
 
@@ -164,17 +163,18 @@ $$
 $$
 
 where $\lceil x\rceil_0 \vcentcolon= \text{sgn}(x)\lceil |x| \rceil$ rounds away from zero.
-The bottom of Figure~\ref{fig:irpb-mapping} shows an example of how relative distances are mapped to the bias index weights used to compute these \textit{interpolated} relative position biases, or IRPBs.
+The bottom of Figure~\ref{fig:irpb-mapping} shows an example of how relative distances are mapped to the bias index weights used to compute these interpolated relative position biases, or IRPBs.
 
 ### 3.4.Alignment Layer
 
 Because we can backprop through IRPBs, the alignment position can be learned directly as a latent property of the model.
 We use an RNN-based alignment layer to update the position at each decoder time step as shown at the top of Figure~\ref{fig:vat-blocks}.
 The RNN is fed with both the input to the alignment layer and the output of a multi-head, location-based cross-attention operation where the attention scores are produced using alignment-informed IRPBs and no content-based query-key comparisons:
-\begin{equation}
+
+$$
     s_{i,j}^{(k)} = \beta^{(k)}(p_i-j)
-    \label{eq:alignment-attention}
-\end{equation}
+$$
+
 where $j$ is the encoder position, $p_i$ is the alignment position at decoder step $i$, and attention weights are produced using the softmax function in eq.~\eqref{eq:attention-weights-softmax}.
 
 The idea here is that the alignment layer has the fairly simple job of maintaining a rough alignment with the input, while finer-grained, phoneme-level awareness and deeper linguistic understanding can be handled by subsequent cross-attention layers that use content-based queries across multiple heads.
@@ -242,11 +242,11 @@ Despite not being necessary for length generalization in our experiments, we fel
 
 ### 4.1.Model Configuration
 
-Our main comparison is between the baseline T5-TTS model and the augmented VAT model.
-We also compare against additional non-Transformer baseline models that were designed for stability, including Tacotron with GMM-based attention (Tacotron-GMMA) \cite{battenberg2020:location-relative} and the unsupervised duration variant of Non-Attentive Tacotron (NAT) \cite{shen2020:non-attentive-tacotron}, a duration-based model.
+Our main comparison is between the baseline T5-TTS model and the augmented ***VAT*** model.
+We also compare against additional non-Transformer baseline models that were designed for stability, including [Tacotron with GMM-based attention (Tacotron-GMMA) (2019)](../TTS2_Acoustic/2019.10.23_DCA.md)and the unsupervised duration variant of [Non-Attentive Tacotron (NAT) (2020)](../TTS2_Acoustic/2020.10.08_NAT.md), a duration-based model.
 
-The reference configuration for the T5-TTS and VAT models uses 6 decoder blocks with 16 attention heads and hidden width 1024.
-For VAT, the alignment block uses a single 256-width LSTM layer and 4 heads in the location-based attention mechanism.
+The reference configuration for the T5-TTS and ***VAT*** models uses 6 decoder blocks with 16 attention heads and hidden width 1024.
+For ***VAT***, the alignment block uses a single 256-width LSTM layer and 4 heads in the location-based attention mechanism.
 The encoder contains 2 residual convolution stages that downsample the input phoneme sequence by 2x in time, followed by 3 non-causal self-attention blocks with 8 heads and width 512.
 All dropout layers use a rate of 0.1.
 At test time, we use a sample temperature of 0.7 when sampling from the AR categorical distribution at the decoder output.
@@ -254,14 +254,14 @@ At test time, we use a sample temperature of 0.7 when sampling from the AR categ
 The VQ-VAE operates on 80Hz mel spectrograms with 128 bins, downsampling by 2x to produce output at a rate of 40Hz.
 Each output frame contains 8 PQ codes with codebook size 256 for an overall bitrate of 2.56 kbps.
 
-For both T5-TTS and VAT, we use position biases with 32 buckets and learn a separate set of biases for every layer, unlike the original T5 paper which shares biases across layers.
+For both T5-TTS and ***VAT***, we use position biases with 32 buckets and learn a separate set of biases for every layer, unlike the original T5 paper which shares biases across layers.
 For causal self-attention layers in the decoder, all 32 buckets are used for negative relative distances ($B=32$), whereas in cross-attention and non-causal self-attention, the 32 buckets are split evenly between positive and negative distances ($B=16$ per side).
 Max distances, $D$, are set to be shorter than the maximum sequence lengths that appear during training,
 which are 96 for the encoder outputs (192-length phoneme sequence downsampled by 2x) and 384 for the decoder (9.6-second utterances with 40Hz codes).
 We chose max distances of $D=64$ for cross-attention and encoder self-attention and $D=128$ for decoder self-attention.
 
 The T5-TTS model uses standard RPBs in all self-attention operations, including in the encoder.
-VAT uses IRPBs in all self- and cross-attention operations, including the purely location-based attention in the alignment layer.
+***VAT*** uses IRPBs in all self- and cross-attention operations, including the purely location-based attention in the alignment layer.
 IRPBs use an MDP of $P_\textrm{MD} = 1.0$.
 Self-attention bias matrices are randomly initialized using a truncated normal, while cross-attention biases use the Gaussian initialization scheme with $\sigma=15$.
 
@@ -273,13 +273,12 @@ and reference implementations for the encoder and decoder are [available online]
 We run experiments using two different English language datasets.
 The first is an internal multi-speaker dataset containing a variety of audio, including book-reading, news-reading, and assistant-like utterances.
 This dataset consists of 670 hours of audio (\texttildelow700,000 total utterances) spoken by 117 distinct speakers.
-Also included are audiobook recodings from the \emph{Lessac} dataset used in the 2013 Blizzard challenge \cite{lessac-blizzard-2013}, which we use as a common point of comparison with the single-speaker Tacotron-GMMA baseline model.
-%
-The second dataset is the clean-460 subset of LibriTTS \cite{zen2019librittscorpusderivedlibrispeech:libritts}, consisting of 213 hours (\texttildelow150,000 utterances) of book-reading audio spoken by 1226 speakers.
+Also included are audiobook recodings from the \emph{Lessac} dataset used in the 2013 Blizzard challenge ([Lessac (2013)](../../Datasets/Lessac.md)), which we use as a common point of comparison with the single-speaker Tacotron-GMMA baseline model.
+The second dataset is the clean-460 subset of [LibriTTS (2019)](../../Datasets/2019.04.05_LibriTTS.md), consisting of 213 hours (\texttildelow150,000 utterances) of book-reading audio spoken by 1226 speakers.
 
 ### 4.3.Training
 
-We train our T5-TTS and VAT models for 650,000 steps using the Adam optimizer to minimize the negative log-likelihood of the spectrogram VQ codes.
+We train our T5-TTS and ***VAT*** models for 650,000 steps using the Adam optimizer to minimize the negative log-likelihood of the spectrogram VQ codes.
 When using the internal multi-speaker dataset, we use the reference configuration from Section~\ref{subsec:model-config}.
 When using LibriTTS data, in order to prevent overfitting, we shrink all layer widths to 3/8 scale (e.g., 1024 to 384) compared to the reference configuration.
 
@@ -287,7 +286,7 @@ We use Tacotron-GMMA as a stability-oriented baseline for the internal dataset.
 However, we found that single-speaker versions of the model sounded better than ones trained on the full multi-speaker dataset.
 Therefore, we only train Tacotron-GMMA on the Lessac single-speaker data and only evaluate using the Lessac voice when comparing against models trained on the full internal multi-speaker dataset.
 
-Non-Attentive Tacotron is used as a LibriTTS baseline and is trained in unsupervised duration mode, following \citet{shen2020:non-attentive-tacotron}.
+Non-Attentive Tacotron is used as a LibriTTS baseline and is trained in unsupervised duration mode, following [NAT (2020)](../TTS2_Acoustic/2020.10.08_NAT.md).
 Full training details are available in Appendix~\ref{app:training-details}.
 
 ### 4.4.Evaluation
@@ -305,7 +304,7 @@ Full training details are available in Appendix~\ref{app:training-details}.
   Additionally, for each model, we run a length generalization stress test using 1034 transcripts of varying lengths (100--1500 characters) and report CER as utterance length is increased.
 - **Repeated Words Stress Test.**
   Attention-based TTS models tend to have trouble when repeated words appear in the input text.
-  We test the ability of the T5-TTS and VAT models to correctly synthesize all the words in three repeated-word templates, each instantiated with 1--9 repetitions of a specific word.
+  We test the ability of the T5-TTS and ***VAT*** models to correctly synthesize all the words in three repeated-word templates, each instantiated with 1--9 repetitions of a specific word.
   These templates along with additional evaluation details can be found in Appendix~\ref{app:evaluation-details}.
 
 ## 5.Results: 结果
@@ -316,19 +315,19 @@ To aid the reader, audio examples from the naturalness evaluation, length genera
 
 MOS naturalness results are shown in the left column of Table~\ref{tab:results-tables}.
 Note that for both datasets, the confidence intervals are overlapping for all models, so there are no clear winners.
-This was surprising given that in informal comparisons the Transformer-based models (T5-TTS and VAT) sounded clearly more expressive and natural to us compared to the Tacotron and NAT baselines.
+This was surprising given that in informal comparisons the Transformer-based models (T5-TTS and ***VAT***) sounded clearly more expressive and natural to us compared to the Tacotron and NAT baselines.
 
 In cases such as this, side-by-side evals can be helpful due to their increased sensitivity and better calibration.
-The naturalness side-by-sides with the VAT model do show that it is preferred over Tacotron-GMMA.
+The naturalness side-by-sides with the ***VAT*** model do show that it is preferred over Tacotron-GMMA.
 Due to its deterministic regression-based objective, Tacotron sounds less expressive than the Transformer-based models which are trained with a fully probabilistic objective.
-VAT also seems to be preferred over NAT, though the result was not quite significant with respect to the 99\% confidence interval.
+***VAT*** also seems to be preferred over NAT, though the result was not quite significant with respect to the 99\% confidence interval.
 Listening to the NAT samples, it is clear that its unsupervised duration mechanism was unable to produce a naturally-varying duration predictor, so its samples sound quite monotonous and robotic.
-However, some of the raters seemed to prefer its highly enunciated and hyper-intelligible style compared to the more varied and expressive samples produced by VAT and T5-TTS.
-Lastly, VAT is shown to be very even with T5-TTS in terms of naturalness, which is expected given that the two models use very similar architectural backbones and identical training objectives.
+However, some of the raters seemed to prefer its highly enunciated and hyper-intelligible style compared to the more varied and expressive samples produced by ***VAT*** and T5-TTS.
+Lastly, ***VAT*** is shown to be very even with T5-TTS in terms of naturalness, which is expected given that the two models use very similar architectural backbones and identical training objectives.
 
 ### 5.2.ASR-Based Robustness
 
-Despite the similarity in naturalness scores between T5-TTS and VAT, the ASR-based robustness results in Table~\ref{tab:results-tables} show that T5-TTS produced a significantly higher CER than other models.
+Despite the similarity in naturalness scores between T5-TTS and ***VAT***, the ASR-based robustness results in Table~\ref{tab:results-tables} show that T5-TTS produced a significantly higher CER than other models.
 This is due to the fact that it tends to drop or repeat words, especially on longer utterances
 (some utterances in the test sets are up to 20 sec long, which exceeds the 9.6 sec training lengths).
 Interesting, the NAT model produced a CER below that of the ground truth audio, which is a result of its overly enunciated style.
@@ -340,13 +339,13 @@ where we plot CER against input text length in characters.
 The max training length for the Transformer-based models is 9.6 sec, and we see that soon after the training length is exceeded, the CER of the T5-TTS model sharply increases.
 Not only does it drop or repeat individual words, but beyond the training length, it frequently drops or repeats entire clauses and sometimes babbles incomprehensibly.
 
-The other models, including VAT and the two stability-oriented baselines, generalize well all the way up to the max tested lengths (1500 characters, or around 90 seconds).
-We can also see that due to the hyper-intelligibility of the duration-based NAT model, it achieves slightly better CER than the VAT model across all text lengths -- though at the expense of expressivity, as is apparent in the audio examples.
+The other models, including ***VAT*** and the two stability-oriented baselines, generalize well all the way up to the max tested lengths (1500 characters, or around 90 seconds).
+We can also see that due to the hyper-intelligibility of the duration-based NAT model, it achieves slightly better CER than the ***VAT*** model across all text lengths -- though at the expense of expressivity, as is apparent in the audio examples.
 
 ### 5.4.Repeated Words Stress Test
 
 The T5-TTS model has difficulty with the repeated words stress test as well.
-Over the 27 test phrases, the VAT model makes no mistakes, whereas T5-TTS makes errors on 14 of the phrases (52\%).
+Over the 27 test phrases, the ***VAT*** model makes no mistakes, whereas T5-TTS makes errors on 14 of the phrases (52\%).
 These errors tend to become increasingly severe as the number of repetitions is increased.
 For example, one of the phrases with 9 target repetitions produces 52 repetitions in the T5-TTS model.
 The majority of the mistakes, however, are off by one errors in the number of repetitions, but T5-TTS produced errors on transcripts that contained as few as 2 repetitions of the target word.
@@ -357,23 +356,23 @@ Note that these repetition errors occur even when the synthesis length is shorte
 ### Discussion
 
 We have shown that the proposed attention enhancements are able to eliminate robustness issues typically observed in Transformer-based TTS systems while matching the synthesis quality of a contemporary T5-based system.
-The VAT model that incorporates these enhancements is able to reliably produce all words in the input text out to seemingly unbounded lengths,
+The ***VAT*** model that incorporates these enhancements is able to reliably produce all words in the input text out to seemingly unbounded lengths,
 and the alignment-informed, multi-layer, multi-head cross attention it uses is inherently more powerful than the single-phoneme alignment mechanisms used in other robustness-oriented TTS models (see Appendix~\ref{app:learned-irpbs}).
 
 This approach can be directly applied to any encoder-decoder model that uses cross-attention layers in the decoder.
 Because the alignment position is constrained to be monotonic, it is best suited for tasks that exhibit broad monotonic alignment between input and output (e.g., TTS and ASR).
 However, the flexibility afforded by query-key comparisons within wide IRPB windows should allow the model to adapt well to off-monotonic alignments if needed (e.g., when using unverbalized text).
 
-Due to the scalability of Transformer-based models, future work should test VAT on significantly larger datasets, potentially with encoder or decoder pre-training on unpaired text or audio, respectively.
+Due to the scalability of Transformer-based models, future work should test ***VAT*** on significantly larger datasets, potentially with encoder or decoder pre-training on unpaired text or audio, respectively.
 Additionally,  using fancier, more powerful approaches to discretization and waveform generation is likely to yield low-level audio quality improvements especially if paired with cleaner, higher-quality datasets.
 
 ### Limitations
 
 - **Implementation Effort.**
-  There is additional implementation and configuration effort required for VAT compared to more homogeneous Transformer-based models;
+  There is additional implementation and configuration effort required for ***VAT*** compared to more homogeneous Transformer-based models;
   however, the code and example configurations we provide should be helpful for researchers attempting to reproduce our work.
 - **Training Speed Impact.**
-  The primary practical downside of VAT is the potential for slower training speed due to serialization of the alignment layer during training.
+  The primary practical downside of ***VAT*** is the potential for slower training speed due to serialization of the alignment layer during training.
   Because most of the model is still able to be trained in parallel, at the training lengths we use, alignment layer serialization had a relatively small impact on training speed (\texttildelow 12 -- 20\% depending on model size).
   Ways to narrow this speed gap further include slimming down the alignment layer RNN or decreasing the VQ-VAE frame rate so that fewer decoder steps are required to model the same amount of audio.
 - **Discrete TTS Comparisons.**
